--- a/ (2).env
+++ b/ (2).env
@@ -1,3 +1,3 @@
 PORT=8000
 MONGO_URI=mongodb+srv://fintegerside:password321@cluster0.kayfa6d.mongodb.net/
-secret key = Secret_Key
+secret_key=secret_key
