--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=8000
-MONGO_URI=mongodb+srv://fintegerside:password321@cluster0.kayfa6d.mongodb.net/
+PORT = 8000
+MONGO_URI = 
 secret key = Secret_Key
